💴🌮 Checkpoint ./.glitch-assets:21406927/485:21466666/967 ./views/index.ejs:21406927/231:21466666/248 ./views/producttype.ejs:21406927/28:21466666/4 ./views/product.ejs:21406927/2362

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,13 +50,13 @@
     </ol>
     
     <div class="carousel-inner">
-      <div class="carousel-item active" style = "height: 500px;">
+      <div class="carousel-item active" style = "height: 540px;">
         <img src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F3194dc5a-e3e9-4c49-909f-4a3bb3050a23.image.png?v=1606080896000" alt="Image" class="d-block w-100">
       </div>
-      <div class="carousel-item" style = "height: 500px;">
-        <img src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fmain.jpeg?v=1605316169908" alt="Image" class="d-block w-100">
+      <div class="carousel-item" style = "height: 540px;">
+        <img src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F46accb59-0443-48f3-8c63-06fb352bc181.image.png?v=1606081106261" alt="Image" class="d-block w-100">
       </div>
-       <div class="carousel-item" style = "height: 500px;">
+       <div class="carousel-item" style = "height: 540px;">
         <img src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fnoo.jpeg?v=1605316404562" alt="Image" class="d-block w-100">
       </div>
     </div>
@@ -104,7 +104,7 @@
     
      <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F899b21af-f83a-4e96-ac73-500ba7410b1a.image.png?v=1605316549392" alt="">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F838c061a-ed90-4c47-8df8-5e515e124c03.image.png?v=1606081195016" alt="">
               <div class="card-body">
                 <h4 class="card-title">
                   <p><a href="/producttype?type=3" style="color:black;">Dessert</a></p>
