--- a/views/producttype.ejs
+++ b/views/producttype.ejs
@@ -16,7 +16,7 @@
   <div class="container-fluid">
   <nav class="navbar navbar-expand-lg navbar-light text-light bg-warning fixed-top">
   
-  <h2 style="color:black;">&nbsp;&nbsp;Pitts Restauranttype&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+  <h2 style="color:black;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
     
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
@@ -70,7 +70,7 @@
   <% }); %>
     </table>
     <% } else { %>
-    <p>No products in the database.</p>
+    <p>No cuisines in the menu.</p>
     <% } %>
     
   </div>
