🦂🍤 Checkpoint ./.glitch-assets:21406927/1978:21466666/2063 ./views/index.ejs:21406927/236:21466666/209

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,7 +115,7 @@
     
     <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fapp.jpg?v=1605316308869" alt="">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F1e59e4eb-af21-4ff5-a2d3-23cd24b0a428.image.png?v=1606085513002" alt="">
               <div class="card-body">
                 <h4 class="card-title">
                   <p><a href="/producttype?type=4" style="color:black;">Appetizers</a></p>
@@ -126,7 +126,7 @@
     
      <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F2018-01-Mexican-Chicken-Soup-1.jpg?v=1605316689335" alt="">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fa08782d7-c3e0-4667-93cd-a4bc106137ec.image.png?v=1606085654532" alt="">
               <div class="card-body">
                 <h4 class="card-title">
                   <p><a href="/producttype?type=5" style="color:black;">Soup</a></p>
