🌶🏙 Checkpoint ./.glitch-assets:21406927/483:21466666/3518 ./views/index.ejs:21466666/260

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -137,7 +137,7 @@
     
      <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F20191016025954974.jpg?v=1605316798451" alt="">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F7e7ca483-ecc3-46ba-938a-a763a493379f_715e2d73-4c82-4f52-99f4-3dde2df6b84d.image.png?v=1606086007894" alt="">
               <div class="card-body">
                 <h4 class="card-title">
                   <p><a href="/producttype?type=6" style="color:black;">Poultry & Eggs</a></p>
