🙎⚾️ Checkpoint ./.glitch-assets:21466666/1504 ./views/index.ejs:21466666/694 ./views/cart.ejs:21466666/971

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,7 +93,7 @@
     
      <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F92b75d13-e69a-42d3-a65d-fe1f757efb1d.image.png?v=1605316978810" alt="">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fbuttermilk-fried-chicken-11-1200.jpg?v=1606086959169" alt="">
               <div class="card-body">
                 <h4 class="card-title">
                   <p><a href="/producttype?type=2" style="color:black;">Main Dishes</a></p>
