--- a/views/addNew.ejs
+++ b/views/addNew.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Shoes</title>
+  <title>Pitts Restaurant</title>
   <link 
       rel="stylesheet" 
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
@@ -54,8 +54,8 @@
     </div>
     
     <div class="form-group">
-      <label for="brand">Brand</label>
-      <input class="form-control" type="text" name="brand">
+      <label for="type">Type</label>
+      <input class="form-control" type="text" name="type">
     </div>
     
       <div class="form-group">
