--- a/views/mine.ejs
+++ b/views/mine.ejs
@@ -26,6 +26,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" href="/index">Home</a></li>
       <li class="nav-item"><a class="nav-link" href="/product">Menu</a></li>
+      <li class="nav-item"><a class="nav-link" href="/type">Type</a></li>
     </ul>
         
      <ul class="navbar-nav ml-auto"> 
