--- a/views/type.ejs
+++ b/views/type.ejs
@@ -25,6 +25,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link active" href="/index">Home</a></li>
       <li class="nav-item"><a class="nav-link" href="/product">Menu</a></li>
+      <li class="nav-item"><a class="nav-link" href="/type">Type</a></li>
     </ul>
         
      <ul class="navbar-nav ml-auto"> 
@@ -35,7 +36,7 @@
  </div>
 </nav>
 </div>
-    <br/><br/><br/>
+    
   
   
   <div class="container-fluid">
@@ -64,10 +65,8 @@
     </div>
     
 <br/><br/><br/><br/>
-  <br/><br/><br/>
   
   <div class="container-fluid text-center">    
-  <h2>Select type here!</h2><br>
   <div class="row">
     
     <div class="col-lg-4 col-md-6 mb-4">
