🍬🚔 Checkpoint ./views/cart.ejs:21478230/1409 ./views/index.ejs:21478230/83 ./views/mine.ejs:21478230/83 ./views/product.ejs:21478230/83 ./views/producttype.ejs:21478230/83 ./views/type.ejs:21478230/83 ./routes/index.js:21478230/1739 ./views/addNew.ejs:21466666/142

--- a/views/addNew.ejs
+++ b/views/addNew.ejs
@@ -69,8 +69,8 @@
     
     
     <div class="form-group">
-      <label for="imageUrl">imageUrl</label>
-      <input class="form-control" type="text" name="imageUrl">
+      <input class="form-control" type="text" name="imageUrl" id="imageUrl">
+      <label for="imageUrl">imageUrl</label>  
     </div>
   <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit"> Submit </button>
 </form>
