--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -31,6 +31,7 @@
         
      <ul class="navbar-nav ml-auto"> 
          <li class="nav-item"><a class="nav-link active" href="/myCart">My Cart</a ></li>
+       <li class="nav-item"><a class="nav-link" href="/getTotalPrice">Pay</a></li>
           <li class="nav-item"><a class="nav-link" href="/mine">My Profile</a ></li>
           <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
     </ul>
@@ -69,11 +70,9 @@
            Clear Cart
          </button>
     </form></td></tr>
-      <tr><td align="center"><form action="/payCart" method="POST">
-        
-        <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit">
-           Pay Cart
-        </button>
+      <tr><td align="center"><a class="nav-link" href="/getTotalPrice"><button class="btn btn-secondary btn-lg btn-block btn-warning" type="button">
+           pay
+         </button></a>
         <tr><td><%= payment_message %></td></tr>
         
     </form></td></tr>
