--- a/views/mine.ejs
+++ b/views/mine.ejs
@@ -31,6 +31,7 @@
         
      <ul class="navbar-nav ml-auto"> 
           <li class="nav-item"><a class="nav-link" href="/myCart">My Cart</a ></li>
+       <li class="nav-item"><a class="nav-link" href="/getTotalPrice">Pay</a></li>
           <li class="nav-item"><a class="nav-link  active" href="/mine">My Profile</a ></li>
           <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
     </ul>
