👡🛣 Checkpoint ./views/cart.ejs:21478230/96 ./views/index.ejs:21478230/83 ./views/mine.ejs:21478230/85 ./views/pay.ejs:21478230/85 ./views/product.ejs:21478230/83 ./views/producttype.ejs:21478230/83 ./views/type.ejs:21478230/83

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -31,7 +31,7 @@
         
      <ul class="navbar-nav ml-auto"> 
          <li class="nav-item"><a class="nav-link active" href="/myCart">My Cart</a ></li>
-       <li class="nav-item"><a class="nav-link" href="/getTotalPrice">Pay</a></li>
+       
           <li class="nav-item"><a class="nav-link" href="/mine">My Profile</a ></li>
           <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
     </ul>
@@ -71,8 +71,8 @@
          </button>
     </form></td></tr>
       <tr><td align="center"><a class="nav-link" href="/getTotalPrice"><button class="btn btn-secondary btn-lg btn-block btn-warning" type="button">
-           pay
-         </button></a>
+           Pay myCart
+         </button></a></td></tr>
         <tr><td><%= payment_message %></td></tr>
         
     </form></td></tr>
