🍵🐽 Checkpoint ./views/login.ejs:21466666/53

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,9 +27,9 @@
         <button type="submit" class="btn btn-primary btn-block">Login</button>
       </form>
       <p class="lead mt-4">
-        No Account? <a href="/users/register">Register</a>
+        New user here? <a href="/users/register">Register</a>
               <p class="lead mt-4">
-        Admin login <a href="/admin/adminlogin">Admin login</a>
+        <a href="/admin/adminlogin">Manager login</a>
       </p>
     </div>
   </div>
